Some changes on the calculator functions.

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,31 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PersonalDatabase</title>
+    <title>calculator</title>
 </head>
 
 <body>
 
-
-
     <h1>Javascript Demo on Console for bank !!!</h1>
 
-    <!--<h3>The Program Does the Following : </h3>
-    <ul>
-        <li>Take Input From User </li>
-        <li>Display User Data on the Console </li>
-    </ul>-->
-
-
-
-
-
-
-
-
-
-
-    <script src="./assets/js/bank.js"></script>
+    <script src="./assets/js/calculator.js"></script>
 
 </body>
 
