--- a/BankSystem/index.html
+++ b/BankSystem/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PersonalDatabase</title>
+    <title>Bank System</title>
 </head>
 
 <body>
